# KernelWithBpfPrograms

./: .gitignore  .gitmodules  Makefile  README.md  bpf-conf  qemu-run.sh
benchmarks/macrobenchmarks/: concept  main.tf  plan  plan.out  providers.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
bpf-progs/: load.user.c
bpf-progs/xdp/: Makefile  XdpProg_PacketsToNginx.kern.c  memaslapVanilla.py  memaslapXdp.py  plotWrk.py  plotWrkBpf.py  plotWrkVanilla.py  xdp-loader
docker/docker-linux-builder/: Dockerfile  Makefile
loader/: Makefile
q-script/: yifei-q
relocation/bpf-progs/: build.sh  demo.kern.c  hello.diff.c  hello_kprobe.user.c  hello_world.kern.c  map.kern.c
relocation/hello-world/: Makefile  bpf_fd  bpf_fd.c  build.sh  hello_getcwd.kern.c  hello_jitted  hello_xlated  load.c  num_hello.kern.c  read  read.c  rel  trigger_getcwd.c
relocation/loader/: bpf_fd  bpf_fd.c  build-jit.sh  elf-combine.sh  extract  extract.c  helper.bpf  lbpf-testing.c  load-and-extract  load-and-extract.c  load-and-extract.sh  load-verified-attach.c  load-verified.c  load.c  loader  loader.c  output  output_rand  pin.c  rand_load.c  rcp.sh  test_attach.c  test_extract_len  test_extract_len.c  test_fd.c  test_full.c  test_full_output.c  test_hex.c  test_link.c  test_load_verified.c  test_pin.c  test_run.c  verify.c
relocation/per-proc/: Makefile  disabled-loop  (+5 more)
samples/: .gitignore
samples/bmc/: Cargo.toml  Makefile  bmc_common.h  bmc_user.c
samples/bmc/src/: bmc_common.rs  helper.rs  main.rs
samples/cpustat/: .gitignore  Cargo.toml  Makefile  cpustat.c  interface.h
samples/cpustat/src/: cpustat_freq.rs  cpustat_idle.rs
samples/syscall_tp/: Cargo.toml  Makefile  syscall_tp_user.c
samples/syscall_tp/src/: helper.rs  main.rs  map.rs
samples/trace_event/: .gitignore  Cargo.toml  Makefile  README.md  trace_event_user.c  trace_helpers.c  trace_helpers.h
samples/trace_event/.cargo/: config.toml
samples/trace_event/src/: main.rs
(+48 files in other folders)
