[package]
name = "bmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

#[dependencies.compiler_builtins]
#git = "https://github.com/rust-lang/compiler-builtins"
#features = ["mem"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[inner_unikernel]

helpers = [
    "bpf_map_lookup_elem",
    "bpf_map_update_elem",
    "bpf_spin_lock",
    "bpf_spin_unlock",
    "bpf_xdp_adjust_head",
    "bpf_xdp_adjust_tail",
    "bpf_trace_printk", # for debugging
]

headers = [
    "linux/bpf.h",
    "linux/if_ether.h",
    "linux/ip.h",
    "linux/udp.h",
    "linux/tcp.h",
]
