[package]
name = "cpustat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

[[bin]]
name = "cpustat_idle"
path = "src/cpustat_idle.rs"

[[bin]]
name = "cpustat_freq"
path = "src/cpustat_freq.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
