[package]
name = "syscall_tp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[inner_unikernel]
helpers = [
    "bpf_map_lookup_elem",
    "bpf_map_update_elem",
]

headers = [
    "linux/bpf.h",
]
