[package]
name = "trace_event_kern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"

[dependencies.inner_unikernel_rt]
path = "../../inner_unikernel_rt"

[profile.dev]
panic = "abort"
